# 04_Medical_Chatbot

./: LICENSE  README.md  app.py  main.py  pyproject.toml  requirements.txt  setup.py  store_index.py  template.py
04_medical_chatbot.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
research/: trials.ipynb
src/: helper.py  prompt.py
static/: main.js
templates/: chat.html
