[project]
name = "04-medical-chatbot"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "flask>=3.1.2",
    "langchain>=0.3.27",
    "langchain-community>=0.3.27",
    "langchain-experimental>=0.3.4",
    "langchain-openai>=0.3.31",
    "langchain-pinecone>=0.2.11",
    "pinecone[grpc]>=7.3.0",
    "pypdf>=6.0.0",
    "python-dotenv>=1.1.1",
    "sentence-transformers==2.2.2",
    "setuptools>=80.9.0",
]
